# mini-ctf-demo

./: Dockerfile  README.md  app.py  config.yaml  data.db  db.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
templates/: login.html  reg.html
